@@ -1,16 +1,28 @@
 package kitchenpos;
 
-import kitchenpos.eatinorders.domain.*;
-import kitchenpos.menus.domain.Menu;
-import kitchenpos.menus.domain.MenuGroup;
-import kitchenpos.menus.domain.MenuProduct;
-import kitchenpos.products.domain.Product;
-
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Random;
 import java.util.UUID;
+import kitchenpos.deliveryorder.domain.DeliveryOrder;
+import kitchenpos.deliveryorder.domain.DeliveryOrderLineItem;
+import kitchenpos.deliveryorder.domain.DeliveryOrderStatus;
+import kitchenpos.deliveryorder.domain.DeliveryOrderType;
+import kitchenpos.eatinorder.domain.EatInOrder;
+import kitchenpos.eatinorder.domain.EatInOrderLineItem;
+import kitchenpos.eatinorder.domain.EatInOrderStatus;
+import kitchenpos.eatinorder.domain.EatInOrderTable;
+import kitchenpos.eatinorder.domain.EatInOrderType;
+import kitchenpos.menu.domain.Menu;
+import kitchenpos.menu.domain.MenuGroup;
+import kitchenpos.menu.domain.MenuProduct;
+import kitchenpos.product.domain.Product;
+import kitchenpos.takeoutorder.domain.TakeoutOrder;
+import kitchenpos.takeoutorder.domain.TakeoutOrderLineItem;
+import kitchenpos.takeoutorder.domain.TakeoutOrderStatus;
+import kitchenpos.takeoutorder.domain.TakeoutOrderType;
 
 public class Fixtures {
     public static final UUID INVALID_ID = new UUID(0L, 0L);
@@ -23,7 +35,8 @@ public class Fixtures {
         return menu(price, false, menuProducts);
     }
 
-    public static Menu menu(final long price, final boolean displayed, final MenuProduct... menuProducts) {
+    public static Menu menu(final long price, final boolean displayed,
+        final MenuProduct... menuProducts) {
         final Menu menu = new Menu();
         menu.setId(UUID.randomUUID());
         menu.setName("후라이드+후라이드");
@@ -61,56 +74,73 @@ public class Fixtures {
         return menuProduct;
     }
 
-    public static Order order(final OrderStatus status, final String deliveryAddress) {
-        final Order order = new Order();
-        order.setId(UUID.randomUUID());
-        order.setType(OrderType.DELIVERY);
-        order.setStatus(status);
-        order.setOrderDateTime(LocalDateTime.of(2020, 1, 1, 12, 0));
-        order.setOrderLineItems(Arrays.asList(orderLineItem()));
-        order.setDeliveryAddress(deliveryAddress);
-        return order;
+    public static DeliveryOrder deliveryOrder(final DeliveryOrderStatus status,
+        final String deliveryAddress) {
+        final DeliveryOrder deliveryOrder = new DeliveryOrder();
+        deliveryOrder.setId(UUID.randomUUID());
+        deliveryOrder.setType(DeliveryOrderType.DELIVERY);
+        deliveryOrder.setStatus(status);
+        deliveryOrder.setOrderDateTime(LocalDateTime.of(2020, 1, 1, 12, 0));
+        deliveryOrder.setOrderLineItems(List.of(deliveryOrderLineItem()));
+        deliveryOrder.setDeliveryAddress(deliveryAddress);
+        return deliveryOrder;
     }
 
-    public static Order order(final OrderStatus status) {
-        final Order order = new Order();
-        order.setId(UUID.randomUUID());
-        order.setType(OrderType.TAKEOUT);
-        order.setStatus(status);
-        order.setOrderDateTime(LocalDateTime.of(2020, 1, 1, 12, 0));
-        order.setOrderLineItems(Arrays.asList(orderLineItem()));
-        return order;
+    public static DeliveryOrderLineItem deliveryOrderLineItem() {
+        final DeliveryOrderLineItem deliveryOrderLineItem = new DeliveryOrderLineItem();
+        deliveryOrderLineItem.setSeq(new Random().nextLong());
+        deliveryOrderLineItem.setMenu(menu());
+        return deliveryOrderLineItem;
     }
 
-    public static Order order(final OrderStatus status, final OrderTable orderTable) {
-        final Order order = new Order();
-        order.setId(UUID.randomUUID());
-        order.setType(OrderType.EAT_IN);
-        order.setStatus(status);
-        order.setOrderDateTime(LocalDateTime.of(2020, 1, 1, 12, 0));
-        order.setOrderLineItems(Arrays.asList(orderLineItem()));
-        order.setOrderTable(orderTable);
-        return order;
+    public static EatInOrder eatInOrder(final EatInOrderStatus status,
+        final EatInOrderTable eatInOrderTable) {
+        final EatInOrder eatInOrder = new EatInOrder();
+        eatInOrder.setId(UUID.randomUUID());
+        eatInOrder.setType(EatInOrderType.EAT_IN);
+        eatInOrder.setStatus(status);
+        eatInOrder.setOrderDateTime(LocalDateTime.of(2020, 1, 1, 12, 0));
+        eatInOrder.setOrderLineItems(List.of(eatInOrderLineItem()));
+        eatInOrder.setOrderTable(eatInOrderTable);
+        return eatInOrder;
     }
 
-    public static OrderLineItem orderLineItem() {
-        final OrderLineItem orderLineItem = new OrderLineItem();
-        orderLineItem.setSeq(new Random().nextLong());
-        orderLineItem.setMenu(menu());
-        return orderLineItem;
+    public static EatInOrderLineItem eatInOrderLineItem() {
+        final EatInOrderLineItem eatInOrderLineItem = new EatInOrderLineItem();
+        eatInOrderLineItem.setSeq(new Random().nextLong());
+        eatInOrderLineItem.setMenu(menu());
+        return eatInOrderLineItem;
     }
 
-    public static OrderTable orderTable() {
-        return orderTable(false, 0);
+    public static EatInOrderTable eatInOrderTable() {
+        return eatInOrderTable(false, 0);
     }
 
-    public static OrderTable orderTable(final boolean occupied, final int numberOfGuests) {
-        final OrderTable orderTable = new OrderTable();
-        orderTable.setId(UUID.randomUUID());
-        orderTable.setName("1번");
-        orderTable.setNumberOfGuests(numberOfGuests);
-        orderTable.setOccupied(occupied);
-        return orderTable;
+    public static EatInOrderTable eatInOrderTable(final boolean occupied,
+        final int numberOfGuests) {
+        final EatInOrderTable eatInOrderTable = new EatInOrderTable();
+        eatInOrderTable.setId(UUID.randomUUID());
+        eatInOrderTable.setName("1번");
+        eatInOrderTable.setNumberOfGuests(numberOfGuests);
+        eatInOrderTable.setOccupied(occupied);
+        return eatInOrderTable;
+    }
+
+    public static TakeoutOrder takeoutOrder(final TakeoutOrderStatus status) {
+        final TakeoutOrder takeoutOrder = new TakeoutOrder();
+        takeoutOrder.setId(UUID.randomUUID());
+        takeoutOrder.setType(TakeoutOrderType.TAKEOUT);
+        takeoutOrder.setStatus(status);
+        takeoutOrder.setOrderDateTime(LocalDateTime.of(2020, 1, 1, 12, 0));
+        takeoutOrder.setOrderLineItems(List.of(takeoutOrderLineItem()));
+        return takeoutOrder;
+    }
+
+    public static TakeoutOrderLineItem takeoutOrderLineItem() {
+        final TakeoutOrderLineItem takeoutOrderLineItem = new TakeoutOrderLineItem();
+        takeoutOrderLineItem.setSeq(new Random().nextLong());
+        takeoutOrderLineItem.setMenu(menu());
+        return takeoutOrderLineItem;
     }
 
     public static Product product() {
